--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ idna==2.6
 nagiosplugin==1.2.4
 requests==2.18.4
 urllib3==1.22
+-e git+git@github.com:cedadev/ceda-unittest-nagios-wrapper.git@59f0d2557c84c473e079aa8728a6ca46d4111c38#egg=ceda_unittest_nagios_wrapper
+-e git+git@github.com:philipkershaw/slack-logging-handler.git@67fd4c51dab4dd9293a239d21471bb3050d6f06d#egg=cedadev_slack_logging_handler
